_removed multer from server dependencies

--- a/fake-server/package.json
+++ b/fake-server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "fakeserver",
+  "name": "fake-server",
   "version": "1.0.0",
-  "description": "Install: ```sh npm install -g json-server ```",
+  "description": "Install:",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -11,7 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "multer": "^1.4.2"
+    "express": "^4.17.1"
   }
 }
