--- a/fake-server/package.json
+++ b/fake-server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "d3-dsv": "^2.0.0",
     "express": "^4.17.1",
     "multer": "^1.4.2"
   }
