--- a/fake-server/package.json
+++ b/fake-server/package.json
@@ -14,5 +14,9 @@
     "d3-dsv": "^2.0.0",
     "express": "^4.17.1",
     "multer": "^1.4.2"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^8.1.3"
   }
 }
