--- a/fake-server/package.json
+++ b/fake-server/package.json
@@ -17,6 +17,9 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "gulp": "^4.0.2",
+    "gulp-mocha": "^7.0.2",
+    "gulp-util": "^3.0.8",
     "mocha": "^8.1.3"
   }
 }
