Added scripts to npm

--- a/fake-server/package.json
+++ b/fake-server/package.json
@@ -4,7 +4,8 @@
   "description": "Install:",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "gulp mocha",
+    "test-watch": "gulp watch",
     "start": "node server.js"
   },
   "author": "",
