--- a/fake-server/package.json
+++ b/fake-server/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "d3-dsv": "^2.0.0",
     "express": "^4.17.1",
+    "lowdb": "^1.0.0",
     "multer": "^1.4.2"
   },
   "devDependencies": {
